<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@color/light_blue">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:rotation="12"
        android:rotationX="21"
        android:rotationY="17"
        android:text="@string/start_textview"
        android:textColor="@android:color/holo_red_light"
        android:textSize="28sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textViewEMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textSize="22sp"
        android:text="@string/text_email" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewEMail"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:textSize="20sp"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextTextEmailAddress"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textSize="22sp"
        android:text="@string/text_password" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewPassword"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:textSize="20sp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/editTextTextPassword"
        android:text="@string/button_enter"
        android:layout_marginTop="8dp"
        android:textSize="24sp"
        android:onClick="clickEnter"
        app:backgroundTint="@android:color/holo_blue_light" />

    <EditText
        android:id="@+id/editTextNumber1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:textSize="20sp"
        android:hint="@string/TextNumber1_hint"
        android:inputType="numberSigned|number|numberDecimal" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextNumber1"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:textSize="20sp"
        android:hint="@string/TextNumber2_hint"
        android:inputType="numberSigned|number|numberDecimal" />

    <Button
        android:id="@+id/button_sum"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextNumber2"
        android:layout_marginTop="8dp"
        android:text="@string/button_sum"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        app:backgroundTint="@android:color/holo_blue_light" />

</RelativeLayout>